# DocsRAG

./: .cursorrules  .gitignore  ARCHITECTURE.md  FORENSIC_ANALYSIS.md  README.md  chat.py  config.py  config.toml  llm_view.json  main.py  makefile  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  todo.txt
data/misc_docs/: Final_Presentation_QuakePredict_Nepal.pptx
modules/: loader.py  rag.py
src/vector_embedding/: __init__.py  main.py  system.py
src/vector_embedding.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vector_embedding/cli/: __init__.py  chat.py
src/vector_embedding/core/: __init__.py  utils.py
src/vector_embedding/core/analysis/: __init__.py  build_profile.py  canonicalizer.py  claims_db.py  metrics.py  schema.py
src/vector_embedding/core/config/: config.py
src/vector_embedding/core/configs/: config.py
src/vector_embedding/core/documents/: __init__.py  loader.py
src/vector_embedding/core/llm/: __init__.py  client.py
src/vector_embedding/core/retrieval/: __init__.py  bm25.py  embeddings.py  reranker.py
src/vector_embedding/modules/: analysis.py  bm25.py  cache_manager.py  embeddings.py  hashing.py  llm_chat_client.py  loader.py  rag.py  reranker.py  vectordb.py
src/vector_embedding/modules/semantic_profile/: extractor.py
src/vector_embedding/pipeline/: rag.py
test/: README.md  conftest.py  evaluate_rag.py  test_current_system.py  test_dataset.py
test/unit/: test_cache_manager.py  test_hashing.py  test_rag_pipeline.py  test_system_integration.py  test_vectordb.py
vector_venv/: pyvenv.cfg
(+3 files in other folders)
