[project]
name = "vector-embedding"
version = "0.1.0"
description = "Personal Document RAG System"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Anmol Baruwal" }]
dependencies = [
  "faiss-cpu",
  "openai",
  "numpy",
  "python-dotenv",
  "pypdf",
  "tenacity",
  "ragas",
  "langsmith",
  "langchain",
  "langchain-openai",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]