[project]
name = "DocuRAG"
version = "0.2.0"
description = "Personal Document RAG System"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Anmol Baruwal" }]
dependencies = [
  "faiss-cpu",
  "openai",
  "numpy",
  "python-dotenv",
  "pypdf",
  "tenacity",
  "ragas",
  "langsmith",
  "langchain",
  "langchain-openai",
  "scikit-learn",
  "sentence-transformers",
  "ruff",
  "black",
  "rank-bm25",
  "ollama",
  "pydantic",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]